--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TODO",
+  "name": "todo",
   "private": true,
   "description": "A simplified bare-bones starter for Gatsby",
   "version": "0.1.0",
@@ -14,7 +14,11 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.14",
+    "@material-ui/styles": "^4.9.14",
     "gatsby": "^2.21.22",
+    "gatsby-plugin-material-ui": "^2.1.8",
+    "install": "^0.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
@@ -24,5 +28,5 @@
   "KB_repository": {
     "type": "git",
     "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
-  }  
+  }
 }
