--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "gatsby-plugin-material-ui": "^2.1.8",
     "install": "^0.13.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "prettier": "2.0.5"
