--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.9.14",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.9.14",
     "gatsby": "^2.21.22",
     "gatsby-plugin-material-ui": "^2.1.8",
