--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-material-ui": "^2.1.8",
     "install": "^0.13.0",
     "react": "^16.12.0",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.12.0",
     "socket.io": "^2.3.0"
   },
